# mybot

src/mybot_description/: CMakeLists.txt
src/mybot_description/config/: simple_controller.yaml
src/mybot_description/launch/: gazebo_sim.launch.py
src/mybot_description/urdf/: kr210_gazebo.urdf.xacro  kr210_robot.urdf  kr210_robot.urdf.back
src/mybot_description/world/: my_world.world  标准块A1.STL
src/mybot_description/world/A1/meshes/: 标准块A1.dae
src/mybot_moveit_config/config/: kr210_gazebo.urdf copy.xacro  kr210_gazebo.urdf.xacro  kr210_robot.srdf
src/mybot_moveit_config/launch/: gazebo.launch.py  my_moveit_rviz.launch.py
src/mybot_trajectory_following/: CMakeLists.txt  package.xml
src/mybot_trajectory_following/src/: follow_arc_trajectory copy.cpp  follow_arc_trajectory.cpp  follow_arc_trajectory.cpp.back  follow_point.cpp
